# labdata-tcc

./: .editorconfig  .gitignore  404.html  Makefile  README.md  docker-compose.yml  go.work  go.work.sum  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: default.yaml  docs.yaml
.husky/: pre-commit
CONTRIBUTING/: index.html
dependency-graph/static/: environment.js
docs/: CONTRIBUTING.md  index.md  summary.md
getting-started/: index.html
libs/golang/database/go-docdb/: README.md  go.mod  project.json
libs/golang/service-discovery/: README.md  go.mod  project.json
libs/golang/service-discovery/sd/: service_discover_test.go  service_discovery.go
libs/golang/shared/go-events/: README.md  go.mod  project.json
libs/golang/shared/go-request/: README.md  go.mod  project.json
libs/golang/shared/json-schema/: README.md  go.mod  project.json
libs/golang/shared/type-tools/: README.md  go.mod  project.json  type_tools.go  type_tools_test.go
libs/python/server/amqp-listener/: README.md  project.json  pyproject.toml
libs/python/server/event-controller/: README.md  project.json  pyproject.toml
libs/python/service-discovery/: README.md  project.json  pyproject.toml
libs/python/service-discovery/pysd/: sd.py
libs/python/service-discovery/tests/: test_sd.py
libs/python/shared/py-argparse/: README.md  project.json  pyproject.toml
libs/python/shared/py-debug/: README.md  project.json  pyproject.toml
libs/python/shared/py-log/: README.md  pyproject.toml
libs/python/shared/py-request/: README.md  project.json  pyproject.toml
libs/python/shared/py-serializer/: README.md  pyproject.toml
libs/python/shared/py-warlock/: README.md  project.json  pyproject.toml
reference/libs/golang/service-discovery/: index.html
reference/libs/python/service-discovery/: index.html
reference/services/crawlers/video-downloader/: index.html
reference/services/shared/config-vault/: index.html
reference/services/shared/events-router/: index.html
reference/services/shared/input-broker/: index.html
reference/services/shared/output-vault/: index.html
reference/services/shared/schema-vault/: index.html
search/: search_index.json
services/crawlers/video-downloader/: Dockerfile  README.md  docker-compose.yml  project.json  pyproject.toml
services/crawlers/video-downloader/downloader/: main.py
services/crawlers/video-downloader/hack/: check-integration.sh
services/shared/config-vault/: README.md  go.mod  go.sum  project.json
services/shared/config-vault/tests/: config.http
services/shared/events-router/: README.md  go.mod  project.json
services/shared/input-broker/: Dockerfile  README.md  go.mod  go.sum  project.json
services/shared/input-broker/test/: input.http
services/shared/output-vault/: README.md  go.mod  project.json
services/shared/output-vault/tests/: output.http
services/shared/schema-vault/: README.md  go.mod  project.json
services/shared/schema-vault/tests/: schema.http
summary/: index.html
(+697 files in other folders)
