[tool.poetry]
name = "labdata-tcc"
version = "0.1.0"
description = ""
authors = ["Fabio Caffarello <fabio.caffarello@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
